[gd_scene load_steps=5 format=3 uid="uid://brjc8gh2jgwkr"]

[ext_resource type="Script" path="res://Scripts/Main.gd" id="1_r2e0v"]
[ext_resource type="Texture2D" uid="uid://bmp535amwsj06" path="res://Assets/100.png" id="2_tjpo2"]
[ext_resource type="Texture2D" uid="uid://dakxnvdg8brme" path="res://Assets/restart-btn.png" id="3_fqxqr"]
[ext_resource type="PackedScene" uid="uid://c1r2wcxppxxof" path="res://Scenes/Bubble.tscn" id="4_dvim1"]

[node name="Node2D" type="Node2D"]
script = ExtResource("1_r2e0v")

[node name="bubbleSprite" type="Sprite2D" parent="."]
position = Vector2(635, 340)
scale = Vector2(0.26, 0.26)
texture = ExtResource("2_tjpo2")

[node name="ResetButton" type="Button" parent="."]
offset_right = 1032.0
offset_bottom = 1032.0
scale = Vector2(0.1, 0.1)
icon = ExtResource("3_fqxqr")
flat = true

[node name="Bubbles" type="Node2D" parent="."]

[node name="Bubble1" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(150, 59)

[node name="Bubble2" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(11, 140)

[node name="Bubble3" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(60, 220)

[node name="Bubble4" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(17, 305)

[node name="Bubble5" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(69, 385)

[node name="Bubble6" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(24, 468)

[node name="Bubble7" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(74, 546)

[node name="Bubble8" parent="Bubbles" instance=ExtResource("4_dvim1")]
position = Vector2(33, 630)

[connection signal="pressed" from="ResetButton" to="." method="_on_reset_button_pressed"]
